# pycses

./: README.md  README.rst  pyproject.toml  setup.py
cses/: __init__.py  generator.py  parser.py
tests/: test_generator.py  test_parser.py
